--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Phi Nguyen # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "https://github.com/feelittlebear/Phi-Nguyen.github.io/blob/60819dff462c4f1f9dffdc6d1e16b714e01a550c/images/Phi%20cool%20image%20for%20github.JPG" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
